<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">KeoPay</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="label_text_hint">Card description</string>
    <string name="cvv_text_hint">CVV/CVC</string>
    <string name="card_text_hint">Cardholders name</string>
    <string name="card_no_text">Card Number</string>
    <string name="title_activity_card_details">Add Card</string>
    <string name="title_activity_view_db">ViewDB</string>
    <string name="button_text">Save Card</string>
    <string name="validity_optional_text">* Optional for Maestro</string>
    <string name="cvv_optional_text">* Optional for Maestro</string>
    <string name="label_optional_text">* Optional</string>
    <string name="action_about">About</string>
    <string name="action_help">Help</string>
    <string name="apply_color">Apply Color</string>
    <string name="title_activity_mobile_number_verification">Register number</string>

    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="sign_out">Sign out</string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>
    <string name="logout">Log Out</string>tring>
    <string name="action_revokeAccess">Revoke Access</string>
    <string name="loginText">Make payments from your phone, seamlessly</string>


    <!-- Button text -->
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="keopay_text">KEOPAY</string>
    <string name="signIn_button_text">Sign in with Gmail</string>
    <string name="EKO_text">EKO/-</string>
</resources>
