<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:floatlabel="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_bar"
        android:layout_marginTop="50dp">

        <com.iangclifton.android.floatlabel.FloatLabel
            android:id="@+id/nameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/card_text_hint"
            android:importantForAccessibility="yes"
            android:inputType="textNoSuggestions|textPersonName|textCapCharacters"
            android:textSize="16sp"
            floatlabel:floatLabelColor="@color/accentColor" />

        <com.iangclifton.android.floatlabel.FloatLabel
            android:id="@+id/cardInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nameInput"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:hint="@string/card_no_text"
            android:importantForAccessibility="yes"
            android:inputType="numberSigned"
            android:maxLength="19"
            android:textSize="16sp"
            floatlabel:floatLabelColor="@color/accentColor" />

        <LinearLayout
            android:id="@+id/expiryAndCVV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cardInput"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp">

            <com.iangclifton.android.floatlabel.FloatLabel
                android:id="@+id/expiryInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:hint="Expiry" />

            <com.iangclifton.android.floatlabel.FloatLabel
                android:id="@+id/cvvInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:hint="@string/cvv_text_hint"
                android:inputType="numberPassword"
                android:maxLength="3"
                android:textIsSelectable="false"
                android:textSize="16sp"
                floatlabel:floatLabelColor="@color/accentColor" />
        </LinearLayout>

        <com.iangclifton.android.floatlabel.FloatLabel
            android:id="@+id/cardLabelText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/expiryAndCVV"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:hint="@string/label_text_hint"
            android:inputType="textCapWords|textPersonName"
            android:textSize="16sp"
            floatlabel:floatLabelColor="@color/accentColor" />
    </RelativeLayout>

    <Button
        android:id="@+id/bSaveCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="140dp"
        android:layout_marginRight="140dp"
        android:background="@drawable/selector_button"
        android:gravity="center"
        android:text="@string/button_text"
        android:textColor="#ffffff"
        android:textSize="17sp" />
</RelativeLayout>